# ZJUers_simulator

./: .dockerignore  .env.example  .env.template  .gitignore  AGENTS.md  DOCKER_RELEASE_PLAN.md  Dockerfile  Dockerfile.tunnel  LICENSE  README.md  README_en.md  TEST_DOCKER_DEPLOY.md  deploy.bat  deploy.py  deploy.sh  docker-compose.override.example  docker-compose.yml  mkdocs.yml  requirements.txt  setup.ps1  setup.sh  stop.bat  stop.sh
.agents/: README.md
.antigravity/: agent_instructions.md
.claude/: CLAUDE.md  Changelog.md  README.md
.codex/: README.md
alembic/: script.py.mako
app/: admin.py  main.py  main_standalone.py
c_modules/: CMakeLists.txt
c_modules/include/: grader_common.h
docs/: DOCKER_RELEASE_PLAN.md  GITHUB_RELEASE_TEMPLATE.md  RELEASE_NOTES.md  TEST_DOCKER_DEPLOY.md  VERSION_INFO.md  add_m2_her.md  add_test.md  architecture_review.md  backend_redundancy_analysis.md  backend_walkthrough.md  faq.md  faq_dev.md  fix_backend_redundancy.md  framework.md  frontend_migration_plan.md  implementation_plan.md  index.md  llm_event_diversity_todo.md  llm_pipeline_architecture.md.md  local_deployment_guide.md  package-lock.json  package.json  prompts.md  save_system_guide.md  tsconfig.json
nginx/: nginx.conf
overrides/: main.html
scripts/: README.md  data_handle.ipynb  deploy.bat  deploy.py  deploy.sh  stop.bat  stop.sh  sync_config.json  sync_docs.py  translate_readme.py  update_cloudflare_ufw.sh
templates/: admission.html  dashboard.html  end.html  index.html
tunnel/: config.yml  eb890b0f-9acb-4a12-9a06-47eacf65050d.json
world/: map.json  (+8 more)
(+351 files in other folders)
